# XFleX

./: .gitignore  README.md  compile.py  compile_linux.py  generate.py
core/: core.h  maths.cpp  maths.h
demo/: .xmake.lua.swp  main.cpp  shaders.h  shadersDemoContext.cpp  xmake.lua
demo/compiler/makelinux64/: Makefile.flexExtCUDA.mk
demo/compiler/vc14win64/: CMakeLists.txt  flexDemoCUDA.vcxproj  flexDemoD3D.vcxproj
demo/d3d/: renderParamsD3D.h
demo/d3d11/: debugLineRenderD3D11.h  demoContextD3D11.cpp  meshRenderD3D11.h
demo/opengl/: shader.cpp  shader.h  shadersGL.cpp
demo/scenes/: fluidblock.h
extensions/: flexExtSoft.cpp  xmake.lua
extensions/compiler/vc14win64/: CMakeLists.txt  flexExtCUDA.vcxproj  flexExtD3D.vcxproj
